--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/@vite/client"></script>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/site-gallery/src/main.ts"></script>
   </body>
 </html>
